force-app/main/default/objects/Cost_Centre__c/Cost_Centre__c.object-meta.xml
<CustomObject>
    <label>Cost Centre</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>