force-app/main/default/objects/Cost_Centre__c/listViews/All_Cost_Centres.listView-meta.xml
<ListView>
    <fullName>All_Cost_Centres</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Inactive</value>
    </filters>
    <label>All Cost Centres</label>
</ListView>